--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,34 @@
 /*.fancy-header {*/
-    /*color: purple; !* single line comment *!*/
+    /*color: purple;
     /*text-decoration: underline;*/
-/*}*/
- .fancy-header{
-     color: #00e222;
-     font-family: "Gill Sans";
-     text-align: center
-}
-header {
+* {
+    color: #ff6;
+    background-color: #000;
+    font-family: "Droid Sans", Arial, Verdana, sans-serif;
+    font-weight: 700;
     text-align: center;
 }
 
-body {
-    background-image: radial-gradient(pink,blue);
-    background-color: #ffe;
-
+h1 {
+    position: relative;
+    width: 16em;
+    font-size: 200%;
+    font-weight: 400;
+    margin: 20% auto;
+    color: #4ee;
+    opacity: 0;
+    z-index: 1;
+    -webkit-animation: intro 2s ease-out;
+    -moz-animation: intro 2s ease-out;
+    -ms-animation: intro 2s ease-out;
+    -o-animation: intro 2s ease-out;
+    animation: intro 2s ease-out;
+}
+#container {
+    list-style: georgian inside;
 
 }
+
+/*body {*/
+    /*background-image: radial-gradient(pink,blue); really cool radiant for background/
+    /*background-color: #ffe;*/
