--- a/css/twitter.css
+++ b/css/twitter.css
@@ -27,9 +27,9 @@ a {
 }
 .top-nav {
     background: var(--light-bg);
-    position: fixed;
+    position: fixed; /*added this line and below*/
     width: 100%;
-    z-index: 2;
+    z-index: 2; /*can have z index only here and not in profile-image*/
 }
 .nav {
     list-style-type: none;
@@ -44,28 +44,34 @@ a {
 .nav-link:hover {
     color: var(--link-color);
 }
-.nav-item {
+.nav-item { /*added this line*/
     display: inline-block;
     padding: 1.5em;
 }
-
 .profile {
     background: var(--light-bg);
     height: 80px;
 }
-.profile-image {
+.profile-image { /*added this part*/
     position: absolute;
     top: 230px;
-    z-index:1;
+    /*z-index:1;*/
 }
 .profile-form {
     float: right;
     line-height: 80px;
 }
-.profile-details {
+.profile-details { /* can be combined with who to follow*/
     float: left;
     width: calc(25% - 1em);
     margin: 0 .5em;
+}
+.profile-items {
+    list-style: none;
+    padding:0;
+}
+.profile-entry {
+    margin:.5em;
 }
 .timeline {
     float: left;
@@ -74,7 +80,7 @@ a {
 }
 .who-to-follow {
     float: left;
-    width: calc(25% - 1em)
+    width: calc(25% - 1em);
     margin: 0 .5em;
 }
 .btn {
@@ -100,6 +106,21 @@ a {
     color: var(--main-link-color);
 }
 .container {
-
+    margin-top: 2em; /*changed this from padding*/
 }
-
+.media{ /*something is wrong here*/
+    width: 100%;
+    background-color:var(--light-bg);
+    border-bottom: var(--separator-color) 1px solid; /*added solid to the borderbottom*/
+    padding: .5em;
+    overflow: auto;
+}
+.media-image {
+    max-width: 50px; /*added max to width*/
+    float:left;
+    margin-top: 1.33em;
+}
+.media-body {
+    float: left;
+    width: calc(100% - 50px)
+}
