--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -10,8 +10,7 @@
         margin: 0;
     }
     footer {
-        position: relative;
-        bottom: 2%;
+        clear: both;
     }
     li {
         background-color: rgb(204 204 204);
@@ -63,8 +62,7 @@
 
 
     footer{
-        position: absolute;
-        bottom: -40%;
+        clear: both;
         margin: 0 5% 0 5%;
     }
 
@@ -86,9 +84,7 @@
 
     .header-img img {
         float: top;
-        margin: 3% 20% 3% 20%;
-        width: 890px;
-        height: 385px;
+        width: 100%;
     }
 
     .main {
