--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,17 +1,12 @@
 /*Mobile*/
-@media screen and (min-width: 380px){
-
-    nav {
-        margin: 5px;
-    }
+@media screen and (min-width: 380px) {
+    /*body added recommend not to add height and weight because it can not change the format*/
     h1 {
         text-align: center;
         font-size: 70px;
         margin: 0;
     }
-    footer {
-        clear: both;
-    }
+
     li {
         background-color: rgb(204 204 204);
         text-align: center;
@@ -19,40 +14,39 @@
         margin: 2% 0 2% 0;
         padding: 8px;
     }
+
+    footer {
+        clear: both;
+    }
+
     .alert-info,
     .hidden-on-desktop {
         background-color: rgb(214 254 254);
-        border: 1px solid rgb(204 204 204);
+        border: 2px solid rgb(204 204 204);
         text-align: center;
         padding: 3%;
+
     }
-     .alert-info a {
-         color: black;
-         text-decoration: none;
-     }
 
-     .nav-links{
-         list-style: none;
+    .alert-info a {
+        color: black;
+        text-decoration: none;
+    }
 
+    .nav-links {
+        list-style: none;
+        text-align: center;
+    }
 
-
-     }
-
-
-    .header-img{
+    .header-img {
         position: relative;
         left: 5%
     }
+
     .sub-section {
         font-style: italic;
         margin: 10% 0 5% 0;
     }
-    .main {
-
-    }
-
-
-
 }
 
 
@@ -60,22 +54,30 @@
 
 @media screen and (min-width:934px) {
 
-
-    footer{
-        clear: both;
-        margin: 0 5% 0 5%;
-    }
-
     h1 {
+        text-align: right;
         float: left;
         margin: 2% 5% 0 5%;
 
     }
     li {
         padding: 1em;
+        text-align: right;
+        font-size: medium;
         display: inline;
         background-color: white;
     }
+
+    footer{
+        clear: both;
+        margin: 0 5% 0 5%;
+    }
+
+    .alert-info,
+    .hidden-on-desktop {
+        display: none;
+    }
+
     .nav-links {
         float: right;
         list-style: none;
@@ -84,7 +86,7 @@
 
     .header-img img {
         float: top;
-        width: 100%;
+        /*width: 100%;*/
     }
 
     .main {
@@ -99,10 +101,6 @@
         margin: 0;
     }
 
-    .alert-info,
-    .hidden-on-desktop {
-    display: none;
-}
 
 
 }
